--- a/11_Front_End/index.html
+++ b/11_Front_End/index.html
@@ -138,12 +138,12 @@
             <div class="row">
                 <div class="mb-3 col">
                     <label class="form-label" for="txtCusId">Customer ID</label>
-                    <input class="form-control" id="txtCusId" name="customerID" placeholder="C00-001" type="text">
+                    <input class="form-control" id="txtCusId" name="id" placeholder="C00-001" type="text">
                     <p><small class="text-danger pl-1" id="lblCusId"></small></p>
                 </div>
                 <div class="mb-3 col">
                     <label class="form-label" for="txtCusName">Customer Name</label>
-                    <input class="form-control" id="txtCusName" name="customerName" placeholder="Yasiru Dahanayaka"
+                    <input class="form-control" id="txtCusName" name="name" placeholder="Yasiru Dahanayaka"
                            type="text">
                     <p><small class="text-danger pl-1" id="lblCusName"></small></p>
                 </div>
@@ -151,13 +151,13 @@
             <div class="row">
                 <div class="mb-3 col">
                     <label class="form-label" for="txtCusAddress">Customer Address</label>
-                    <input class="form-control" id="txtCusAddress" name="customerAddress" placeholder="Mapalagama Galle"
+                    <input class="form-control" id="txtCusAddress" name="address" placeholder="Mapalagama Galle"
                            type="text">
                     <p><small class="text-danger pl-1" id="lblCusAddress"></small></p>
                 </div>
                 <div class="mb-3 col">
                     <label class="form-label" for="txtCusContact">Customer Tp</label>
-                    <input class="form-control" id="txtCusContact" name="customerContact" placeholder="076 8383493"
+                    <input class="form-control" id="txtCusContact" name="contact" placeholder="076 8383493"
                            type="text">
                     <p><small class="text-danger pl-1" id="lblCusContact"></small></p>
                 </div>
